Bug 565732 - [15] record declaration without parenthesis not flagged error
Change-Id: I02c33f35b0b56c1bda377e40a654657e49539858
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>